# Sound-Healing-MCP

./: .gitignore  README.md  pyproject.toml  server.py  setup-mcp.bat  setup-mcp.sh
mcp-config-examples/: cursor-config.json
